Upgrade to Gulp 4 to solve vulnerabilities

--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "acorn": "^6.1.1",
     "browserify": "^16.2.3",
     "del": "^2.2.0",
-    "event-stream": "^4.0.1",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^2.0.3",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
     "gulp-zip": "^3.2.0",
     "humanize-duration": "^3.18.0",
-    "run-sequence": "^1.1.5",
+    "merge-stream": "^2.0.0",
     "vinyl-source-stream": "^2.0.0",
     "workingday-uk": "^1.0.0"
   },
